# redis

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxygen.config  LICENSE  README.md  config.toml  vcpkg.json
.github/workflows/: linux.yml
cmake/: FindHiredis.cmake  PackageConfigHelpers.cmake.in
docs/analysis/: software_requirement_specification.md  use_case_descriptions.md
docs/analysis/diagrams/: activity_command_execution_pipeline.puml  activity_startup.puml  components.puml  deployment.puml  dfd_context.puml  dfd_execute.puml  dfd_subprocess.puml  sequence_client_server_interaction.puml  sequence_connection_ping_pong.puml  startup.puml  state_connection_lifecycle.puml  use_case.puml
docs/design/: software_design_document.md
docs/design/diagrams/: activity_save.puml  class_diagram.puml  data_modelling.puml  sequence.puml
docs/test/: TEST_CHECKLIST.md
include/: core.hpp  server.hpp
include/core/: core.hpp  error.hpp  logging.hpp  resp.hpp  utils.hpp
include/core/error/: errc_formatter.hpp  failed.hpp  simple_message.hpp  try.hpp
include/core/logging/: logger.hpp
include/core/resp/: parser.hpp  value.hpp
include/core/utils/: create_temp_file.hpp  deadline_timer.hpp  error_enum_formatter.hpp  get_class_logger.hpp  meyers_singleton.hpp  meyers_singletone.hpp  time.hpp
include/server/: commands.hpp  database.hpp  net.hpp  setup_cli_options.hpp
include/server/commands/: command_type.hpp  crud.hpp  exists.hpp  handler.hpp  info.hpp  list.hpp  ping.hpp  save.hpp  ttl.hpp
include/server/memory/: database.hpp  history.hpp  saveparam.hpp
include/server/net/: formatter.hpp  nothrow_awaitable_t.hpp  redis_server.hpp  session.hpp  tcp_server.hpp
scripts/: run.sh  test_server.sh  unit_test.sh
src/: CMakeLists.txt  actions.hpp  command.hpp  config.cpp  config.hpp  core.hpp  database.cpp  database.hpp  db.cpp  db.hpp  error.hpp  gate.cpp  gate.hpp  http_resource.cpp  http_resource.hpp  http_server.hpp  main.cpp  net.hpp  primitive.hpp  resp.hpp  ret.hpp  snapshot.cpp  snapshot.hpp  utility.cpp  utility.hpp  utils.hpp  value.hpp
src/actions/: db.cpp  db.hpp  gate.cpp  gate.hpp  snapshot.cpp  snapshot.hpp
src/commands/: client_connection_command.cpp  client_connection_command.hpp  cmd.cpp  cmd.hpp  command_type.cpp  command_type.hpp  crud.cpp  crud.hpp  exists.cpp  exists.hpp  handler.cpp  handler.hpp  info.hpp  keyspace_command.cpp  keyspace_command.hpp  list_command.cpp  list_command.hpp  ping.cpp  ping.hpp  server_command.cpp  server_command.hpp  set_command.cpp  set_command.hpp  string_command.cpp  string_command.hpp  ttl.cpp  ttl.hpp
src/convert/: from.hpp
src/core/: CMakeLists.txt  database.cpp  database.hpp  setup_cli_options.cpp  setup_cli_options.hpp
src/core/error/: simple_message.cpp
src/core/logging/: logger.cpp
src/core/resp/: parser.cpp  value.cpp
src/core/utils/: create_temp_file.cpp  deadline_timer.cpp  get_class_logger.cpp  toupper.cpp
src/error/: app_error.cpp  app_error.hpp  errc_formatter.hpp  error.cpp  error.hpp  error_or.hpp  execute_error.hpp  parse_error.cpp  parse_error.hpp  simple_message.cpp  snapshot_error.cpp  snapshot_error.hpp  try.hpp  ttl_error.cpp  ttl_error.hpp  unwrap.hpp
src/net/: co_main.cpp  co_main.hpp  concepts.hpp  database.cpp  database.hpp  http_query_handler.cpp  http_query_handler.hpp  http_resource.cpp  http_resource.hpp  http_server.cpp  http_server.hpp  nothrow_awaitable_t.hpp  redis_store.cpp  redis_store.hpp  resp_parser.cpp  resp_parser.hpp  session.cpp  session.hpp  tcp_server.cpp  tcp_server.hpp
src/primitive/: key.hpp  reply.hpp  ret.hpp  value.cpp  value.hpp
src/resp/: parser.cpp  parser.hpp  resp_parser.cpp  resp_parser.hpp  value.cpp  value.hpp
src/server/: CMakeLists.txt  database.cpp  main.cpp  setup_cli_options.cpp
src/server/commands/: crud.cpp  exists.cpp  handler.cpp  list.cpp  ping.cpp  ttl.cpp
src/server/memory/: database.cpp
src/server/net/: redis_server.cpp  session.cpp  tcp_server.cpp
src/utils/: create_temp_file.cpp  create_temp_file.hpp  deadline_timer.cpp  error_ret_formatter.cpp  error_ret_formatter.hpp  get_class_logger.cpp  get_class_logger.hpp  lifetimebound.hpp  my_cereal_interface.hpp  singleton.hpp  split_by_space.cpp  split_by_space.hpp  toupper.cpp  toupper.hpp  visitor_helper_type.hpp
tests/: CMakeLists.txt  script.py  test.cpp
tests/resp/: parser.cpp
tests/server/: del.cpp  get.cpp  ping_pong.cpp  redis_fixture.hpp  save.cpp  server_listener.hpp  set.cpp  test_client.hpp  wait_for_port.hpp
tests/unit/resp/: parser.cpp
